kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dehon-dev
spec: {}
status: {}
