kube/deploiement-webserver.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
    labels:
      app: blue
    name: blue
    namespace: default
  spec:
    progressDeadlineSeconds: 600
    replicas: 8
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: blue
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: blue
      spec:
        containers:
        - image: jpetazzo/color
          imagePullPolicy: Always
          name: blue
          resources:
            requests:
              cpu: "0.1"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
